<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flip</string>
    <string name="textViewRows">Rows:</string>
    <string name="textViewColumns">Columns:</string>
    <string name="textViewMaxLoop">Max Loop:</string>
    <string name="buttonPlay">Play!</string>
    <string name="buttonResume">Resume Game!</string>
    <string name="chooseAGame">Choose a game</string>
    <string name="checkBoxSound">Sound</string>
    <string name="checkBoxHaptic">Haptic</string>
    <string name="textViewPulsations">Pulsations</string>

    <string name="norowsnocolumnsnomaxloops">It must have more than 0 rows, columns or max loops</string>

    <string name="itemLanguage">Language</string>
    <string name="itemEnglish">English</string>
    <string name="itemSpanish">Spanish</string>
    <string name="itemScore">Score</string>
    <string name="itemPreferences">Preferences</string>
    <string name="itemLogIn">Logins</string>

    <string-array name="games">
        <item>Flip: Colors</item>
        <item>Flip: Numbers</item>
    </string-array>

    <string name="Presses">Presses:</string>
    <string name="itemExitGame">Exit Game</string>
    <string name="itemExitApp">Exit App</string>

    <string name="textViewUsername">Username</string>
    <string name="switchSD">Store the data on the SD</string>
    <string name="buttonSavePreferences">Accept</string>
</resources>