<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_menu">


    <item
        android:id="@+id/itemLanguage"
        android:title="@string/itemLanguage">
        <menu>
            <item
                android:id="@+id/itemEnglish"
                android:title="@string/itemEnglish" />
            <item
                android:id="@+id/itemSpanish"
                android:title="@string/itemSpanish" />
        </menu>
    </item>
    <item
        android:id="@+id/itemScores"
        android:title="@string/itemScore" />
    <item
        android:id="@+id/itemPreferences"
        android:title="@string/itemPreferences" />
    <item
        android:id="@+id/itemLogIn"
        android:title="@string/itemLogIn" />
</menu>