<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUsername"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editTextUsername"
            android:layout_weight="1" />

    </LinearLayout>

    <Switch
        android:text="@string/switchSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switchSD" />

    <Button
        android:text="@string/buttonSavePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSavePreferences"
        android:onClick="savePreferences"/>
</LinearLayout>